Images added. Links to main page fixed.

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 <div class="container">
 	<div class="row">
 		<div class="three columns nav">
-			<a href="main.html">Главная</a>
+			<a href="index.html">Главная</a>
 		</div>
 		
 		<div class="two columns nav">
