--- a/quotes.html
+++ b/quotes.html
@@ -34,7 +34,7 @@
 	<div class="row">
 		<div class="three columns nav">
 			<div class="three columns nav">
-			<a href="main.html">Главная</a>
+			<a href="index.html">Главная</a>
 		</div>
 		</div>
 		
