--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="container">
 	<div class="row">
 		<div class="three columns nav">
-			<a href="main.html">Главная</a>
+			<a href="index.html">Главная</a>
 		</div>
 		
 		<div class="two columns nav">
@@ -63,7 +63,7 @@
 	</h1>
 	<div class="row">
         <div class="one-third column">
-			<img src="./images/scorpions01.jpg" class="u-max-full-width" alt="group1">
+			<img src="images/scorpions01.jpg" class="u-max-full-width" alt="group1">
         </div>
         <div class="one-third column">
 			<img src="./images/scorpions02.jpg" class="u-max-full-width" alt="group2">
