--- a/members.html
+++ b/members.html
@@ -29,7 +29,7 @@
 		#infoDiv {
 			display : none;
 			position : absolute;
-			width : 80px;
+			width : 250px;
 			color : #ffffff;
 			background-color : red;
 		}
@@ -56,7 +56,7 @@
 		}
 		function moveInfo (e) {
 			var infoS = g('infoDiv').style;
-			w = 120;
+			w = 250;
 			if (document.all) { 
 				x = event.x + document.body.scrollLeft; 
 				y = event.y + document.body.scrollTop; 
@@ -101,7 +101,7 @@
 <div class="container">
 	<div class="row">
 		<div class="three columns nav">
-			<a href="main.html">Главная</a>
+			<a href="index.html">Главная</a>
 		</div>
 		
 		<div class="two columns nav">
