Maciwoda's picture size fixed.

--- a/members.html
+++ b/members.html
@@ -121,7 +121,7 @@
 		<img id="disk1" src="./images/rudolf_schenker.jpg" alt="Rudolf Schenker">
 		<img id="disk2" src="./images/klaus_meine.jpg" alt="Klaus Meine">
 		<img id="disk3" src="./images/matthias_jabs.jpg" alt="Matthias Jabs">
-		<img id="disk4" src="./images/pawel_maciwoda.jpg" alt="Pawel Maciwoda">
+		<img id="disk4" src="./images/maciwoda.jpg" alt="Pawel Maciwoda">
 		<img id="disk5" src="./images/mikkey_dee.jpg" alt="Mikkey Dee">
 		<img id="disk6" src="./images/ulrich_roth.jpg" alt="Ulrich Roth">
 		<img id="disk7" src="./images/herman_rarebell.jpg" alt="Herman Rarebell">
